--- a/css/clean.css
+++ b/css/clean.css
@@ -1,3 +1,15 @@
 body{
+	margin: 0;
+	text-align: center;
+	background-color: lightgrey;
+}
+header{
+	text-align: center;
 	background-color: white;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+main{
+	font-family: 'Playfair Display', serif;;
+	font-size: 11px;
 }
